[package]
name = "recho"
version = "0.1.0"
edition = "2021"
authors = [ "Michal <michal.test@gmail.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
pretty_assertions = "1.4.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
anyhow = "1"
